--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 	url = https://github.com/zhilongjia/dnmf
 	shallow = true
 	registered = true
+[submodule "cogena"]
+	path = cogena
+	url = https://github.com/zhilongjia/cogena
+	shallow = true
+	registered = true
