--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,11 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "DNMF"]
+	path = DNMF
+	url = https://github.com/zhilongjia/dnmf
+	shallow = true
+	registered = true
 [submodule "cogena"]
 	path = cogena
 	url = https://github.com/zhilongjia/cogena
